syntax = "proto3";

package raysql.protobuf;

option java_multiple_files = true;
option java_package = "raysql.protobuf";
option java_outer_classname = "RaySqlProto";

import "datafusion.proto";

message RaySqlExecNode {
  oneof PlanType {
    ShuffleReaderExecNode shuffle_reader = 1;
    ShuffleWriterExecNode shuffle_writer = 2;
  }
}

message ShuffleReaderExecNode {
  // stage to read from
  uint32 stage_id = 1;
  // partition to read - this is the *output* partition of the shuffle stage
  uint32 partition = 2;
  // schema of the shuffle stage
  datafusion.Schema schema = 3;
  // this must match the output partitions of the writer we are reading from
  uint32 num_output_partitions = 4;
  // directory for shuffle files
  string shuffle_dir = 5;
}

message ShuffleWriterExecNode {
  // stage that is writing the shuffle files
  uint32 stage_id = 1;
  // plan to execute
  datafusion.PhysicalPlanNode plan = 2;
  // hash partition expressions
  repeated datafusion.PhysicalExprNode partition_expr = 3;
  // number of output partitions
  uint32 num_output_partitions = 4;
  // directory for shuffle files
  string shuffle_dir = 5;
}